<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1e1e20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/vita_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <android.support.design.widget.TextInputEditText
                android:layout_width="170dp"
                android:layout_height="28dp"
                android:background="#ffffff" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCat1"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cat5"
                    android:textColor="#009246"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCat2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cat8"
                    android:textColor="#009246"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCat3"
                    android:layout_width="86dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cat9"
                    android:textColor="#009246"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCat4"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/cat10"
                    android:textColor="#009246"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCat5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    android:text="@string/cat6"
                    android:textColor="#009246"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>